<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pizzeria</string>
    <string name="enter_name">Pizzeria name</string>
    <string name="enter_courier_count">Couriers number</string>
    <string name="enter_button">Enter</string>
    <string name="add_order">Add order</string>
    <string name="write_phone">write phone number</string>
    <string name="write_pizza_sort">write pizza sort</string>
    <string name="write_number">write telephone number</string>
    <array name="times">
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
        <item>21:30</item>
        <item>22:00</item>
        <item>22:30</item>
        <item>23:00</item>
        <item>23:30</item>
    </array>
    <array name="speeds">
        <item>00:30</item>
        <item>01:00</item>
        <item>01:30</item>
    </array>
</resources>