<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_name"
            android:id="@+id/textView" android:layout_gravity="center_horizontal"
            android:textSize="23sp"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pizzNameEdit"
            android:layout_gravity="center_horizontal"/>
    <Space
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            />
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_courier_count"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="23sp"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/curNumbEdit"
            android:layout_gravity="center_horizontal"/>
    <Space
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_button"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:onClick="enterName"/>
</LinearLayout>